--- a/templates/login.html
+++ b/templates/login.html
@@ -57,10 +57,13 @@
   }
 
   .auth-title {
-    font-size: 22px;
-    font-weight: 800;
-    margin-bottom: 25px;
-    letter-spacing: 1px;
+    font-family: "Poppins", sans-serif;
+    font-size: 28px;  /* slightly smaller */
+    font-weight: 900;
+    color: #ff1a1a;
+    letter-spacing: 3px;
+    margin-bottom: 28px;
+    text-shadow: 0 0 18px rgba(255,0,0,0.7);
   }
 
   .login-box input {
