--- a/templates/index.html
+++ b/templates/index.html
@@ -226,7 +226,7 @@ else
   </div>
 
   <!-- 👇 Styled Description and Developer Info -->
-<p class="developer">Developer: FR CONSOLE</p>
+<p class="developer">Developer: SHUBH</p>
 <div style="margin-bottom: 12px;"></div>
 <a href="/static/FRCONSOLE.cs" download class="btn btn-success btn-sm">⬇️ Download FRCONSOLE.cs</a>
 </div>
