--- a/templates/index.html
+++ b/templates/index.html
@@ -133,8 +133,11 @@
     <label class="form-label">SELECT APPLICATION</label>
     <select class="form-select" id="appSelect" onchange="refreshUsers()">
       <option value="FRCONSOLE">FRCONSOLE</option>
-      <option value="ADMIN">ADMIN</option>
-      <option value="TESTER">TESTER</option>
+      <option value="ADMIN">SILENTAIM</option>
+      <option value="TESTER">INTERNAL</option>
+      <option value="TESTER">SOUTH</option>
+      <option value="TESTER">SOUTHAIM</option>
+      <option value="TESTER">SOUTHV2</option>
     </select>
   </div>
   <!-- Add User -->
