--- a/templates/index.html
+++ b/templates/index.html
@@ -137,6 +137,7 @@
       <option value="INTERNAL">INTERNAL</option>
       <option value="SOUTH">SOUTH</option>
       <option value="SILENTAIM">SOUTHAIM</option>
+       <option value="PUSSY">SOUTHAIM</option>
       <option value="SOUTHV2">SOUTHV2</option>
     </select>
   </div>
